Migrate from tokio-modbus to modbus-rs library
This library allows to set timeouts and pulls in fewer dependencies.
Support for slave id change was implemented in a fork.
Switch to original crate when change was upstreamed.

--- a/datacollector.toml
+++ b/datacollector.toml
@@ -1,5 +1,9 @@
-modbus_hostname = "127.0.0.1:502"
 scan_interval_sec = 10
+
+[modbus]
+hostname = "127.0.0.1"
+port = 502
+timeout_sec = 1
 
 [influxdb]
 hostname = "http://localhost:8086"
