--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,6 @@ clap = "2"
 env_logger = "0.6"
 influx_db_client = "0.3"
 log = "0.4"
+modbus = { git = "https://github.com/TimoKroeger/modbus-rs", branch = "slave_id" }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.4"
-
-[dependencies.tokio-modbus]
-git = "https://github.com/uklotzde/tokio-modbus"
-branch = "new_api"
-default-features = false
-features = ["tcp", "sync"]
