--- a/datacollector.toml
+++ b/datacollector.toml
@@ -1,5 +1,3 @@
-scan_interval_sec = 10
-
 [modbus]
 hostname = "127.0.0.1"
 port = 502
@@ -10,6 +8,9 @@ hostname = "http://localhost:8086"
 database = "db"
 username = "user"
 password = "pw"
+
+[measurements]
+scan_interval_sec = 10
 
 [[measurements.moisture]]
 id = 1
