--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clap = "2"
 humantime = "1.2"
 influx_db_client = "0.3"
 log = "0.4"
-modbus = { git = "https://github.com/TimoKroeger/modbus-rs", branch = "slave_id" }
+modbus = { git = "https://github.com/TimoKroeger/modbus-rs", branch = "no_connect" }
 serde = { version = "1.0", features = ["derive"] }
 serde-humantime = "0.1"
 simplelog = "0.5"
