Implement TCP keep-alive for better error handling
Previously a timed out read operation could mean that either the
lost the TCP connection or that the sesnsor is not available.

Not TCP connection is checked by keepalive. So all timeouts indicate
that a sensor did not responsd.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ modbus = { git = "https://github.com/TimoKroeger/modbus-rs", branch = "no_connec
 serde = { version = "1.0", features = ["derive"] }
 serde-humantime = "0.1"
 simplelog = "0.5"
+socket2 = "0.3"
 toml = "0.4"
