--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 clap = "2"
 humantime = "1.2"
 log = "0.4"
-modbus = { git = "https://github.com/TimoKroeger/modbus-rs", branch = "slave_id" }
+tokio-modbus = { version = "0.3", default-features = false, features = ["tcp", "sync"] }
 reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde-humantime = "0.1"
