--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ publish = false
 clap = "2"
 humantime = "1.2"
 log = "0.4"
-tokio-modbus = { version = "0.3", default-features = false, features = ["tcp", "sync"] }
 reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde-humantime = "0.1"
 simplelog = "0.5"
+tokio-modbus = "0.3"
+tokio-serial = "3.2"
 toml = "0.5"
