--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ publish = false
 [dependencies]
 clap = "2"
 humantime = "1.2"
+isahc = "0.7"
 log = "0.4"
 modbus = "1.0.2"
-reqwest = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 simplelog = "0.5"
 toml = "0.5"
