--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 
 [dependencies]
 bus = "2.2.2"
+chrono = "0.4"
 clap = "2"
 crossbeam-utils = "0.6.6"
 humantime = "1.2"
@@ -15,5 +16,5 @@ isahc = "0.7"
 log = "0.4"
 modbus = "1.0.2"
 serde = { version = "1.0", features = ["derive"] }
-simplelog = "0.5"
+simplelog = "0.6"
 toml = "0.5"
