--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 publish = false
 
 [dependencies]
-bus = "2.2.2"
 chrono = "0.4"
 clap = "2"
-crossbeam-utils = "0.6.6"
+futures-timer = "0.3"
+futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
 humantime = "1.2"
 isahc = "0.7"
 log = "0.4"
