--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 [dependencies]
 chrono = "0.4"
 clap = "2"
+ctrlc = "3.1"
 futures-timer = "0.3"
 futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
 humantime = "1.2"
