--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 chrono = "0.4"
 clap = "2"
 ctrlc = "3.1"
+derive_more = "0.15.0"
 futures-timer = "0.3"
 futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
 humantime = "1.2"
