--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 [dependencies]
 chrono = "0.4"
 clap = "2"
-ctrlc = "3.1"
+ctrlc = { version = "3.1", features = ["termination"] }
 derive_more = "0.15.0"
 futures-timer = "0.3"
 futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
