--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
+anyhow = "1.0"
 chrono = "0.4"
 clap = "2"
 ctrlc = { version = "3.1", features = ["termination"] }
