--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,7 @@ chrono = "0.4"
 clap = "2"
 ctrlc = { version = "3.1", features = ["termination"] }
 derive_more = "0.15.0"
-futures-timer = "0.3"
-futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
+futures = "0.3"
 humantime = "1.2"
 isahc = "0.7"
 log = "0.4"
@@ -21,3 +20,4 @@ modbus = "1.0.2"
 serde = { version = "1.0", features = ["derive"] }
 simplelog = "0.7.4"
 toml = "0.5"
+tokio = { version = "0.2", features = ["macros", "rt-core", "stream", "time"] }
