--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 anyhow = "1.0"
-clap = "2"
+clap = { version = "3.1", features = ["cargo"] }
 ctrlc = { version = "3.2", features = ["termination"] }
 futures = "0.3"
 humantime = "2.1.0"
