--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ publish = false
 
 [dependencies]
 anyhow = "1.0"
+attohttpc = { version = "0.19.1", default-features = false, features = ["tls"] }
 clap = { version = "3.1", features = ["cargo"] }
 ctrlc = { version = "3.2", features = ["termination"] }
 humantime = "2.1.0"
-isahc = "0.7"
 log = "0.4"
 modbus = "1.0"
 serde = { version = "1.0", features = ["derive"] }
